att tela do telefone

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div id="telefone">
-            <iframe src="" frameborder="0"></iframe>
+            <iframe name="tela" id="tela" src="home.html"></iframe>
         </div>
         <div id="redes">
 
