--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 <body>
     <main>
-        <div id="telefone">
-            <iframe name="tela" id="tela" src="home.html"></iframe>
-        </div>
-        <div id="redes">
-
-        </div>
-        
+        <section id="telefone">
+            <iframe name="tela" id="tela" src="home.html">Seu navegador não é compatível com isso.</iframe>
+        </section>
     </main>
+    <section id="redes">
+        <a href="home.html" target="tela"><img src="imagens/logo-home.jpg"  alt=""></a> 
+        <a href="#" target="tela"><img src="imagens/logo-youtube.jpg"  alt="" ></a> 
+        <a href="#" target="tela"><img src="imagens/logo-github.jpg"   alt=""></a> 
+        <a href="#" target="tela"><img src="imagens/logo-instagram.jpg"  alt=""></a> 
+        <a href="#" target="tela"><img src="imagens/logo-twitter.jpg"  alt=""></a> 
+    </section>
 </body>
 </html>
