--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </main>
     <section id="redes">
         <a href="home.html" target="tela"><img src="imagens/logo-home.jpg"  alt=""></a> 
-        <a href="#" target="tela"><img src="imagens/logo-youtube.jpg"  alt="" ></a> 
-        <a href="#" target="tela"><img src="imagens/logo-github.jpg"   alt=""></a> 
-        <a href="#" target="tela"><img src="imagens/logo-instagram.jpg"  alt=""></a> 
-        <a href="#" target="tela"><img src="imagens/logo-twitter.jpg"  alt=""></a> 
+        <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg"  alt="" ></a> 
+        <a href="github.html" target="tela"><img src="imagens/logo-github.jpg"   alt=""></a> 
+        <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg"  alt=""></a> 
+        <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg"  alt=""></a> 
     </section>
 </body>
 </html>
