--- a/instagram.html
+++ b/instagram.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Instagram</title>
     <link rel="stylesheet" href="estilos/style-telas.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="youtube">
-    <a href="https://www.youtube.com/watch?v=ar5UB2MxraE&list=PLHz_AreHm4dkcVCk2Bn_fdVQ81Fkrh6WT&index=15"  target="_blank">Acesse</a>
+    <img src="imagens/tela-instagram.jpg" alt="Insta">
+    <a href="https://www.instagram.com/gustavoguanabara/">Acesse</a>
 </body>
 </html>
