--- a/github.html
+++ b/github.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/tela-github.jpg" alt="gitbhub">
-    <a href="https://github.com/pedrocostaqa">Acesse</a>
+    <a href="https://github.com/pedrocostaqa" target="_blank">Acesse</a>
 </body>
 </html>
