--- a/instagram.html
+++ b/instagram.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/tela-instagram.jpg" alt="Insta">
-    <a href="https://www.instagram.com/gustavoguanabara/">Acesse</a>
+    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">Acesse</a>
 </body>
 </html>
